# find-me-a-job

./: .gitignore  Data_Cleaning.ipynb  NaukriDotComResponse.json  README.md  data  dataCleaning.py  jsondata.json  knownData  knownField.html  knownFieldNext.html  knownListings  main.py  package.json  requirements.txt  scrapper.py  scrappers.py  unknownData  unknownField.html  userTailoredListing.py  user_info.json
.github/workflows/: backend-build.yml  build.yml  deploy.yml  frontend-build.yml  frontend-lint.yml
.ipynb_checkpoints/: scrappers-checkpoint.py
backend/: .gitignore  index.js  index.ts  main.py  output.json  package-lock.json  package.json  pyproject.toml  scrappers.py  skillsDict.json  suggestion.py  temp.json
backend/backend/: ScrapperV2.py  ScrappersV2.py  datammanu.py  jsonData.json  main.py  scrappers.py  scrappersV2.py
backend/backend/.ipynb_checkpoints/: Data_Cleaning-checkpoint.ipynb
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Barchart.tsx  KnownFieldResults.tsx
frontend/src/pages/: FieldKnown.tsx  FieldUnknown.tsx  Home.tsx  KnownFieldResults.tsx  Results.tsx  Test.tsx  ToggleView.tsx
templates/: graph.html  index.html  knownField.html  preKnown.html  preUnknown.html  unknownField.html
user-info-app/: package-lock.json  package.json  server.js  user_info.json
user-info-app/public/: index.html  knownFieldNext.html  unknownField.html
