[tool.poetry]
name = "deep"
version = "0.1.0"
description = ""
authors = ["deep-kumawat <deepdkmail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
selectolax = "^0.3.21"
flask = "^3.0.3"
flask-cors = "^4.0.1"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
